syntax = "proto3";

option go_package = "github.com/YOJIA-yukino/simple-douyin-backend/api/rpc_controller_service/favorite/route";

package route;

service UserInfo{

}